--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <h1>Amit Agarwal</h1>
-  <img src="./IMG_20200731_211507.jpg" width="200" height="200" alt="">
+  <img src="/IMG_20200731_211507.jpg" width="200" height="200" alt="">
   <hr>
   <h2>Professional Summary </h2>
   <p>Overall, <strong>15+</strong>years of experience in multi-faceted roles in software development and quality engineering.<br>
