--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>Amit's Personal Website</title>
-  <style>
-    img {
-      border-radius: 50%;
-    }
-  </style>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td><img src="./IMG_20200731_211507.JPG" width="200" height="200" alt=""></td>
-      <td><p><h1>Amit Agarwal</h1>
-      Email : amit17star@gamil.com | Phone : +91-9980146051</p></td>
+      <td>
+        <p>
+          <h1>Amit Agarwal</h1>
+          Email : amit17star@gamil.com | Phone : +91-9980146051
+        </p>
+      </td>
     </tr>
-    </table>
+  </table>
 
 
 
