--- a/index.html
+++ b/index.html
@@ -6,29 +6,63 @@
   <title>Amit's Personal Website</title>
   <link rel="stylesheet" href="./styles.css">
   <link rel="icon" href="./favicon.ico">
+  <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet"> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+ <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="./IMG_20200731_211507.JPG" width="200" height="200" alt=""></td>
-      <td>
-        <p>
-          <h1>Amit Agarwal</h1>
-          Email : amit17star@gamil.com | Phone : +91-9980146051
-        </p>
-      </td>
-    </tr>
-  </table>
+<!-- <div class="top-container-0">
+  <p>
+  <a href="./mywork.html"><h4>Work</h4></a> <a href="./notes.html"><h4>Notes</h4></a> <a href="./notes.html"><h4>Notes</h4></a>
+  </p>
+</div> -->
+
+  <div class="top-container-1">
+
+    <!-- <h5 align="left">My Work :
+      <a href="./jellyfish.html">Jellyfish - Test Impact Analysis Framework</a>
+      <a href="./test4rest.html">Test4Rest - RestAPIs Testing Framework</a>
+    </h5> -->
+
+    <div align="right" class="">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <!-- <p>© 2020 Name Surname.</p> -->
+    </div>
+
+    <table cellspacing="20">
+      <tr>
+        <td><img src="./IMG_20200731_211507.JPG" width="200" height="200" alt=""></td>
+        <td>
+          <p>
+            <h1>Amit Agarwal</h1>
+            <strong>Email : amit17star@gmail.com | Phone : +91-9980146051</strong>
+          </p>
+        </td>
+      </tr>
+    </table>
+    <hr>
+  </div>
 
 
-
-  <hr>
+<div class="prof-summary-container">
   <h2>Professional Summary </h2>
-  <p>Overall, <strong>15+</strong>years of experience in multi-faceted roles in software development and quality engineering.<br>
+  <p>Overall, <strong>15+</strong>years of experience in multi-faceted roles in software development and quality engineering.
     Technically competent and a thoughtful leader with abilities to bring about continuous improvement through adoption of automation technologies,
     agile transformations and team building.</p>
   <hr>
+
+</div>
+
+
+
+
+
+
+  <div class="exp-summary-container">
   <h2>Experience Summary </h2>
   <strong>Quality Engineering Leader</strong>
   <br>
@@ -115,14 +149,19 @@
   </ul>
 
   <hr>
-  <h2>Education</h2>
-  <ul>
-    <li><strong>Dr. A.P.J. Abdul Kalam Technical University, India</strong><br>
-      Bachelor of Technology (B.Tech.), Computer Software Engineering <strong>2000 - 2004</strong></li>
-  </ul>
-  <hr>
-  <h2>Technical Expertise</h2>
-  <table>
+  </div>
+  <div class="edu-summary-container">
+    <h2>Education</h2>
+    <ul>
+      <li><strong>Dr. A.P.J. Abdul Kalam Technical University, India</strong><br>
+        Bachelor of Technology (B.Tech.), Computer Software Engineering <strong>2000 - 2004</strong></li>
+    </ul>
+    <hr>
+
+  </div>
+  <div class="tech-summary-container">
+    <h2>Technical Expertise</h2>
+    <table>
     <tr>
       <td><strong>✅ Selenium Webdriver using Java</strong></td>
       <td>⭐️⭐️⭐️⭐️⭐️</td>
@@ -135,13 +174,21 @@
       <td><strong>✅ JS, Node.js, Angular.js</strong></td>
       <td>⭐️⭐️⭐️⭐️</td>
     </tr>
-  </table>
+    </table>
 
-  <hr>
-  <h2>Professional Skills</h2>
-  <hr>
-  <h2>Certifications</h2>
-  <hr>
+    <hr>
+  </div>
+
+  <div class="pskills-summary-container">
+    <h2>Professional Skills</h2>
+    <hr>
+  </div>
+
+  <div class="certi-summary-container">
+    <h2>Certifications</h2>
+    <hr>
+  </div>
+
 </body>
 
 </html>
