--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
- <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<!-- <div class="top-container-0">
+  <!-- <div class="top-container-0">
   <p>
   <a href="./mywork.html"><h4>Work</h4></a> <a href="./notes.html"><h4>Notes</h4></a> <a href="./notes.html"><h4>Notes</h4></a>
   </p>
@@ -27,9 +27,10 @@
     </h5> -->
 
     <div align="right" class="">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/amit-agarwal-263ab022">LinkedIn</a>
+      <a class="footer-link" href="">Work</a>
+      <a class="footer-link" href="">Notes</a>
+      <a class="footer-link" href="">Get In Touch</a>
       <!-- <p>© 2020 Name Surname.</p> -->
     </div>
 
@@ -48,14 +49,14 @@
   </div>
 
 
-<div class="prof-summary-container">
-  <h2>Professional Summary </h2>
-  <p>Overall, <strong>15+</strong>years of experience in multi-faceted roles in software development and quality engineering.
-    Technically competent and a thoughtful leader with abilities to bring about continuous improvement through adoption of automation technologies,
-    agile transformations and team building.</p>
-  <hr>
+  <div class="prof-summary-container">
+    <h2>Professional Summary </h2>
+    <p>Overall, <strong>15+</strong>years of experience in multi-faceted roles in software development and quality engineering.
+      Technically competent and a thoughtful leader with abilities to bring about continuous improvement through adoption of automation technologies,
+      agile transformations and team building.</p>
+    <hr>
 
-</div>
+  </div>
 
 
 
@@ -63,92 +64,92 @@
 
 
   <div class="exp-summary-container">
-  <h2>Experience Summary </h2>
-  <strong>Quality Engineering Leader</strong>
-  <br>
-  <strong>Feb 2017 – Present</strong>
-  <br>
-  <strong>Cisco IoT Control Center (SaaS) Platform</strong>
-  <br>
-  <ul>
-    <li>Responsible to <em><strong>build, lead and mentor</strong></em> the quality engineering team of (25+) On-shore\Off-shore high performing QA team consisting of SDETs and QAEs.
-    </li>
-    <li> Imbibe a culture of innovation and continuous learning in the team and quickly integrate them into the regular work.
-    </li>
-    <li>Work with product, business, and engineering teams to ensure we are creating strategy and technical design for quality delivery & implementing features that meet the customer requirements
-    </li>
-    <li>Communicate effectively at different levels including senior leadership, peers, reporting team and other stakeholders to ensure clarity in all product/release quality-related progress and updates.
-    </li>
-    <li>Drive the Go/No-Go decisions for product releases</li>
-    <li> <em> <strong>Hands On :</strong></em> Full Stack Web Development – HTML,CSS, jQuery, JavaScript, SQL, Spring and React.</li>
-    <li><em> <strong>Expertise : </strong></em>Quality Engineering, DevOps, Agile Project Management and Product Innovation.</li>
-    <li><em> <strong>Key Deliverables : </strong></em>Code Impact Analysis Framework (reduces regression test cycle by 70%)</li>
-  </ul>
-  <!-- Intuit -->
-  <strong>Staff Software Engineer</strong>
-  <br>
-  <strong>March 2012 - Feb 2017</strong>
-  <br>
-  <strong>Intuit QuickBooks Online (QBO)</strong>
-  <br>
-  <ul>
-    <li><em><strong>Staff QA</em></strong> - Development of <em><strong>automation strategy and building frameworks </strong></em> for UI and APIs testing.</li>
-    <li>Implement CI\CD process and functional code coverage.</li>
-    <li>Conduct code reviews to manage automation code quality and guide teams for improvements and adherence of best practices.</li>
-    <li>Travelled to Intuit Inc. San Jose California (USA) for 4 weeks to lead release testing for QBO.</li>
-    <li>Travelled to Intuit Inc. Woodland Hills California (USA) for 3 weeks to get required knowledge transition on core functionalities and set-up backup QE teams at Intuit, India Center.</li>
-    <li><em><strong>Hands On : </strong></em>Core Java, Python, Selenium, Appium, REST-assured, Jacoco, Jira, Jenkins etc..</li>
-  </ul>
+    <h2>Experience Summary </h2>
+    <strong>Quality Engineering Leader</strong>
+    <br>
+    <strong>Feb 2017 – Present</strong>
+    <br>
+    <strong>Cisco IoT Control Center (SaaS) Platform</strong>
+    <br>
+    <ul>
+      <li>Responsible to <em><strong>build, lead and mentor</strong></em> the quality engineering team of (25+) On-shore\Off-shore high performing QA team consisting of SDETs and QAEs.
+      </li>
+      <li> Imbibe a culture of innovation and continuous learning in the team and quickly integrate them into the regular work.
+      </li>
+      <li>Work with product, business, and engineering teams to ensure we are creating strategy and technical design for quality delivery & implementing features that meet the customer requirements
+      </li>
+      <li>Communicate effectively at different levels including senior leadership, peers, reporting team and other stakeholders to ensure clarity in all product/release quality-related progress and updates.
+      </li>
+      <li>Drive the Go/No-Go decisions for product releases</li>
+      <li> <em> <strong>Hands On :</strong></em> Full Stack Web Development – HTML,CSS, jQuery, JavaScript, SQL, Spring and React.</li>
+      <li><em> <strong>Expertise : </strong></em>Quality Engineering, DevOps, Agile Project Management and Product Innovation.</li>
+      <li><em> <strong>Key Deliverables : </strong></em>Code Impact Analysis Framework (reduces regression test cycle by 70%)</li>
+    </ul>
+    <!-- Intuit -->
+    <strong>Staff Software Engineer</strong>
+    <br>
+    <strong>March 2012 - Feb 2017</strong>
+    <br>
+    <strong>Intuit QuickBooks Online (QBO)</strong>
+    <br>
+    <ul>
+      <li><em><strong>Staff QA</em></strong> - Development of <em><strong>automation strategy and building frameworks </strong></em> for UI and APIs testing.</li>
+      <li>Implement CI\CD process and functional code coverage.</li>
+      <li>Conduct code reviews to manage automation code quality and guide teams for improvements and adherence of best practices.</li>
+      <li>Travelled to Intuit Inc. San Jose California (USA) for 4 weeks to lead release testing for QBO.</li>
+      <li>Travelled to Intuit Inc. Woodland Hills California (USA) for 3 weeks to get required knowledge transition on core functionalities and set-up backup QE teams at Intuit, India Center.</li>
+      <li><em><strong>Hands On : </strong></em>Core Java, Python, Selenium, Appium, REST-assured, Jacoco, Jira, Jenkins etc..</li>
+    </ul>
 
-  <!-- Dell -->
-  <strong>Senior Software QA Analyst</strong>
-  <br>
-  <strong>July 2009 – March 2012</strong>
-  <br>
-  <strong>Dell – VIS 1.0 (Virtual Integrated System) Private Cloud Computing</strong>
-  <br>
-  <ul>
-    <li><em><strong>Lead QA</strong></em> - Development of Test Plan, Test Cases, automation strategy and building frameworks for UI and APIs testing.</li>
-    <li>Responsible for day-to-day team support activities (daily bug scrubs, cross functional progress meet and status reporting for QA activities); pushing for information exchange between various product sub-groups, and maintaining 360-degree
-      communication.</li>
-    <li>Responsible for end to end planning, guiding and delivery of features with highest quality.</li>
-    <li>Travelled to Dell Round-Rock, Texas (USA) for Six-weeks to participate in the System & Scalability Testing.</li>
-    <li><em><strong>Hands On :</strong></em> Test Automation – Selenium, WebDriver, TestNG, TFS, Zephyr, JIRA, Perforce(P4V) v Hands On : Virtualization Techniques - VMWARE ESXi Server, vSphere Client.</li>
-  </ul>
+    <!-- Dell -->
+    <strong>Senior Software QA Analyst</strong>
+    <br>
+    <strong>July 2009 – March 2012</strong>
+    <br>
+    <strong>Dell – VIS 1.0 (Virtual Integrated System) Private Cloud Computing</strong>
+    <br>
+    <ul>
+      <li><em><strong>Lead QA</strong></em> - Development of Test Plan, Test Cases, automation strategy and building frameworks for UI and APIs testing.</li>
+      <li>Responsible for day-to-day team support activities (daily bug scrubs, cross functional progress meet and status reporting for QA activities); pushing for information exchange between various product sub-groups, and maintaining 360-degree
+        communication.</li>
+      <li>Responsible for end to end planning, guiding and delivery of features with highest quality.</li>
+      <li>Travelled to Dell Round-Rock, Texas (USA) for Six-weeks to participate in the System & Scalability Testing.</li>
+      <li><em><strong>Hands On :</strong></em> Test Automation – Selenium, WebDriver, TestNG, TFS, Zephyr, JIRA, Perforce(P4V) v Hands On : Virtualization Techniques - VMWARE ESXi Server, vSphere Client.</li>
+    </ul>
 
-  <!-- AOL -->
-  <strong>Software QA Engineer</strong>
-  <br>
-  <strong>December 2007 – July 2009</strong>
-  <br>
-  <strong>AOL – America Online (Portal, Web and Email)</strong>
-  <br>
-  <ul>
-    <li><em><strong>Software Engineer QA</strong></em> - Responsible for Preparing Test plan, Reviewing and Designing Test Cases and Tracing requirements through traceability matrix.</li>
-    <li>Involved in Development of the Automation frame work using Selenium 1.0.</li>
-    <li>Involved in the automation execution of Black Box test cases using Selenium + testNG</li>
-    <li>Responsible for Installation of builds on the Linux Server machines on a Weekly basis in the QA India Cluster and performing Build Verification Testing.</li>
-    <li>Responsible for Tracking the bugs, categorizing, reporting the bugs and follow up the bug status.</li>
-    <li><em><strong>Hands On : </strong></em> Performance Testing – Selenium, JMeter, SVN</li>
+    <!-- AOL -->
+    <strong>Software QA Engineer</strong>
+    <br>
+    <strong>December 2007 – July 2009</strong>
+    <br>
+    <strong>AOL – America Online (Portal, Web and Email)</strong>
+    <br>
+    <ul>
+      <li><em><strong>Software Engineer QA</strong></em> - Responsible for Preparing Test plan, Reviewing and Designing Test Cases and Tracing requirements through traceability matrix.</li>
+      <li>Involved in Development of the Automation frame work using Selenium 1.0.</li>
+      <li>Involved in the automation execution of Black Box test cases using Selenium + testNG</li>
+      <li>Responsible for Installation of builds on the Linux Server machines on a Weekly basis in the QA India Cluster and performing Build Verification Testing.</li>
+      <li>Responsible for Tracking the bugs, categorizing, reporting the bugs and follow up the bug status.</li>
+      <li><em><strong>Hands On : </strong></em> Performance Testing – Selenium, JMeter, SVN</li>
 
-  </ul>
+    </ul>
 
-  <!-- Ness -->
-  <strong>Software Engineer</strong>
-  <br>
-  <strong>April 2005 – November 2007</strong>
-  <br>
-  <strong>Indus Service Suite (CRM, Enterprise Asset Management)</strong>
-  <br>
-  <ul>
-    <li><em><strong>Software Engineer</strong></em> - Responsible forJ2EE Web App, QA Tools and automation Development.</li>
-    <li>Test Plan and Test Case Development, UI automation using QTP.</li>
-    <li>Involved in Functional, Integration, Regression, Performance and System Testing. </li>
-    <li><em><strong>Hands On : </strong></em>Development & Test Automation – core Java, J2EE, Servlets, SQL, QTP, VB Scripting, Quality Center, JIRA.</li>
+    <!-- Ness -->
+    <strong>Software Engineer</strong>
+    <br>
+    <strong>April 2005 – November 2007</strong>
+    <br>
+    <strong>Indus Service Suite (CRM, Enterprise Asset Management)</strong>
+    <br>
+    <ul>
+      <li><em><strong>Software Engineer</strong></em> - Responsible forJ2EE Web App, QA Tools and automation Development.</li>
+      <li>Test Plan and Test Case Development, UI automation using QTP.</li>
+      <li>Involved in Functional, Integration, Regression, Performance and System Testing. </li>
+      <li><em><strong>Hands On : </strong></em>Development & Test Automation – core Java, J2EE, Servlets, SQL, QTP, VB Scripting, Quality Center, JIRA.</li>
 
-  </ul>
+    </ul>
 
-  <hr>
+    <hr>
   </div>
   <div class="edu-summary-container">
     <h2>Education</h2>
@@ -162,18 +163,30 @@
   <div class="tech-summary-container">
     <h2>Technical Expertise</h2>
     <table>
-    <tr>
-      <td><strong>✅ Selenium Webdriver using Java</strong></td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td><strong>✅ Python</strong></td>
-      <td>⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td><strong>✅ JS, Node.js, Angular.js</strong></td>
-      <td>⭐️⭐️⭐️⭐️</td>
-    </tr>
+      <tr>
+        <td><strong> ✔️Full Stack Web Development:-</strong></td>
+        <td>HTML, CSS, Bootstrap, REST, Node.js, React.js</td>
+      </tr>
+      <tr>
+        <td><strong> ✔️Programming Languages:-</strong></td>
+        <td>C, C++, Java, J2EE, Python and Ruby</td>
+      </tr>
+      <tr>
+        <td><strong>✔️Open Source Testing Tools:-</strong></td>
+        <td>Selenium 1.0\2.0, Webdriver, testNG, REST-assured</td>
+      </tr>
+      <tr>
+        <td><strong>✔️Defect Tracking Tools:-</strong></td>
+        <td>JIRA</td>
+      </tr>
+      <tr>
+        <td><strong>✔️Continuous Integration:-</strong></td>
+        <td>Amazon Web Services(AWS), Jenkins CI\CD pipeline, gitHub, Maven, Jacoco code coverge, microservices</td>
+      </tr>
+      <tr>
+        <td><strong>✔️Database Technologies:-</strong></td>
+        <td>Oracle, MySQL, MongoDB, PostgreSQL, influxDB, Promethus</td>
+      </tr>
     </table>
 
     <hr>
@@ -181,11 +194,47 @@
 
   <div class="pskills-summary-container">
     <h2>Professional Skills</h2>
+    <table>
+      <tr>
+        <td><strong>✔️ Quality Engineering</strong></td>
+        <td><strong>✔️ Test Automation</strong></td>
+        <td><strong>✔️ Test Frameworks</strong></td>
+        <td><strong>✔️ Test Planning</strong></td>
+      </tr>
+      <tr>
+        <td><strong>✔️ Test Estimation</strong></td>
+        <td><strong>✔️ Test Strategy</strong></td>
+        <td><strong>✔️ Agile Methodolgies</strong></td>
+        <td><strong>✔️People Management</strong></td>
+        <td><strong>✔️Product Innovation and leadership</strong></td>
+
+      </tr>
+
+
+
+    </table>
+
     <hr>
   </div>
 
   <div class="certi-summary-container">
     <h2>Certifications</h2>
+    Certified ScrumMaster® (CSM®) - Scrum Alliance® Issued Sep 2018 - Expires Sep 2020
+    <hr>
+  </div>
+
+  <div class="patent-summary-container">
+    <h2>Patents</h2>
+    <ol>
+      </li>
+      <li>1029445-US.01 Approved(@Cisco)<p>[Simplified 5G Core for enterprise use cases] Differentiated Multi-Party billing for Enterprises based on 5G network slice</p>
+      </li>
+
+      <li>DC-19717 Recognised(@Dell)<p>SOLUTION FOR REALTIME COLLECTION OF OS & APPLICATION LOGS, DETECTION OF CATASTROPHIC FAILURE AND ASSISTANCE IN OUT-OF-BAND (OOB) SYSTEM’S DISASTER RECOVERY BY EXPORTING REALTIME LOGS IN A CLOUD MANAGEMENT
+          SOLUTION
+        </p>
+    </ol>
+
     <hr>
   </div>
 
