--- a/index.html
+++ b/index.html
@@ -4,66 +4,93 @@
 <head>
   <meta charset="utf-8">
   <title>Amit's Personal Website</title>
-  <link rel="stylesheet" href="./styles.css">
-  <link rel="icon" href="./favicon.ico">
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet"> -->
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/styles.css">
+
+  <link rel="icon" href="./images/Jellyfish/favicon.ico">
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <!-- <div class="top-container-0">
-  <p>
-  <a href="./mywork.html"><h4>Work</h4></a> <a href="./notes.html"><h4>Notes</h4></a> <a href="./notes.html"><h4>Notes</h4></a>
-  </p>
-</div> -->
 
-  <div class="top-container-1">
+  <!-- Navigation-->
+  <div class="container" style="background-color:#8ad7c1">
 
-    <!-- <h5 align="left">My Work :
-      <a href="./jellyfish.html">Jellyfish - Test Impact Analysis Framework</a>
-      <a href="./test4rest.html">Test4Rest - RestAPIs Testing Framework</a>
-    </h5> -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <!-- <a class="navbar-brand" href="#">Amit's Profile</a> -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-    <div align="right" class="">
-      <a class="footer-link" href="https://www.linkedin.com/in/amit-agarwal-263ab022">LinkedIn</a>
-      <a class="footer-link" href="">Work</a>
-      <a class="footer-link" href="">Notes</a>
-      <a class="footer-link" href="">Get In Touch</a>
-      <!-- <p>© 2020 Name Surname.</p> -->
-    </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/in/amit-agarwal-263ab022">LinkedIn</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              My Work
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="./jellyfish.html">Jellyfish</a>
+              <a class="dropdown-item" href="#">Performance Dashboard</a>
+              <!--<div class="dropdown-divider"></div>-->
+              <a class="dropdown-item" href="#">Test4Rest</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Notes</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
 
-    <table cellspacing="20">
-      <tr>
-        <td><img src="./IMG_20200731_211507.JPG" width="200" height="200" alt=""></td>
-        <td>
+
+    <!-- Profile Pic Container-->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <img id="profile-img" src="./images/Jellyfish/IMG_20200731_211507.JPG" width="200" height="200" alt="">
+        </div>
+        <div class="col-lg-6">
           <p>
             <h1>Amit Agarwal</h1>
             <strong>Email : amit17star@gmail.com | Phone : +91-9980146051</strong>
           </p>
-        </td>
-      </tr>
-    </table>
-    <hr>
+
+        </div>
+
+      </div>
+
+      <hr>
+    </div>
   </div>
 
 
-  <div class="prof-summary-container">
+  <div class="container" style="background-color:#fbf6f0">
     <h2>Professional Summary </h2>
     <p>Overall, <strong>15+</strong>years of experience in multi-faceted roles in software development and quality engineering.
       Technically competent and a thoughtful leader with abilities to bring about continuous improvement through adoption of automation technologies,
       agile transformations and team building.</p>
     <hr>
-
   </div>
 
-
-
-
-
-
-  <div class="exp-summary-container">
+  <div class="container" style="background-color:#EAF6F6">
     <h2>Experience Summary </h2>
     <strong>Quality Engineering Leader</strong>
     <br>
@@ -148,19 +175,19 @@
       <li><em><strong>Hands On : </strong></em>Development & Test Automation – core Java, J2EE, Servlets, SQL, QTP, VB Scripting, Quality Center, JIRA.</li>
 
     </ul>
-
     <hr>
   </div>
-  <div class="edu-summary-container">
+
+  <div class="container" style="background-color:#fbf6f0">
     <h2>Education</h2>
     <ul>
       <li><strong>Dr. A.P.J. Abdul Kalam Technical University, India</strong><br>
         Bachelor of Technology (B.Tech.), Computer Software Engineering <strong>2000 - 2004</strong></li>
     </ul>
     <hr>
-
   </div>
-  <div class="tech-summary-container">
+
+  <div class="container" style="background-color:#EAF6F6">
     <h2>Technical Expertise</h2>
     <table>
       <tr>
@@ -192,7 +219,7 @@
     <hr>
   </div>
 
-  <div class="pskills-summary-container">
+  <div class="container" style="background-color:#fbf6f0">
     <h2>Professional Skills</h2>
     <table>
       <tr>
@@ -207,34 +234,27 @@
         <td><strong>✔️ Agile Methodolgies</strong></td>
         <td><strong>✔️People Management</strong></td>
         <td><strong>✔️Product Innovation and leadership</strong></td>
-
       </tr>
-
-
-
     </table>
-
     <hr>
   </div>
 
-  <div class="certi-summary-container">
+  <div class="container" style="background-color:#EAF6F6">
     <h2>Certifications</h2>
     Certified ScrumMaster® (CSM®) - Scrum Alliance® Issued Sep 2018 - Expires Sep 2020
     <hr>
   </div>
 
-  <div class="patent-summary-container">
+  <div class="container" style="background-color:#fbf6f0">
     <h2>Patents</h2>
     <ol>
       </li>
       <li>1029445-US.01 Approved(@Cisco)<p>[Simplified 5G Core for enterprise use cases] Differentiated Multi-Party billing for Enterprises based on 5G network slice</p>
       </li>
-
       <li>DC-19717 Recognised(@Dell)<p>SOLUTION FOR REALTIME COLLECTION OF OS & APPLICATION LOGS, DETECTION OF CATASTROPHIC FAILURE AND ASSISTANCE IN OUT-OF-BAND (OOB) SYSTEM’S DISASTER RECOVERY BY EXPORTING REALTIME LOGS IN A CLOUD MANAGEMENT
           SOLUTION
         </p>
     </ol>
-
     <hr>
   </div>
 
