--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <link rel="icon" href="./images/Jellyfish/favicon.ico">
 
+  <!-- Font Awesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
 
@@ -50,7 +53,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Notes</a>
+            <a class="nav-link" href="#footer">Get In Touch</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -68,9 +71,7 @@
           <img id="profile-img" src="./images/Jellyfish/IMG_20200731_211507.JPG" width="200" height="200" alt="">
         </div>
         <div class="col-lg-6">
-          <p>
-            <h1>Amit Agarwal</h1>
-            <strong>Email : amit17star@gmail.com | Phone : +91-9980146051</strong>
+          <p><strong><h1>Amit Agarwal</h1></strong>
           </p>
 
         </div>
@@ -223,17 +224,25 @@
     <h2>Professional Skills</h2>
     <table>
       <tr>
-        <td><strong>✔️ Quality Engineering</strong></td>
+        <td><strong>✔️ Test Strategy</strong></td>
         <td><strong>✔️ Test Automation</strong></td>
         <td><strong>✔️ Test Frameworks</strong></td>
         <td><strong>✔️ Test Planning</strong></td>
+        <td><strong>✔️ Test Estimation</strong></td>
       </tr>
       <tr>
-        <td><strong>✔️ Test Estimation</strong></td>
-        <td><strong>✔️ Test Strategy</strong></td>
+        <td><strong>✔️ Quality Engineering</strong></td>
         <td><strong>✔️ Agile Methodolgies</strong></td>
-        <td><strong>✔️People Management</strong></td>
-        <td><strong>✔️Product Innovation and leadership</strong></td>
+        <td><strong>✔️ Leadership</strong></td>
+        <td><strong>✔️ Scrum Master</strong></td>
+        <td><strong>✔️ Product Innovation</strong></td>
+      </tr>
+      <tr>
+        <td><strong>✔️ Risk Management</strong></td>
+        <td><strong>✔️ People Management</strong></td>
+        <td><strong>✔️ Project Management</strong></td>
+        <td><strong>✔️ Conflict Resolution</strong></td>
+        <td><strong>✔️ Mentoring</strong></td>
       </tr>
     </table>
     <hr>
@@ -256,8 +265,20 @@
         </p>
     </ol>
     <hr>
-  </div>
+</div>
 
+    <!-- Footer -->
+
+    <footer id="footer">
+      <div class="container-fluid">
+        <i class="social-icon fab fa-linkedin-in"></i>
+        <i class="social-icon fab fa-facebook-f"></i>
+        <i class="social-icon fab fa-twitter"></i>
+        <i class="social-icon fab fa-instagram"></i>
+        <p> <strong><i class="fas fa-envelope"></i> : amit17star@gmail.com <i class="fas fa-mobile-alt"></i> : +91-9980146051</strong></p>
+        <p>© Copyright 2020 Amit's Agarwal Personal Website</p>
+      </div>
+    </footer>
 </body>
 
 </html>
