--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             </div>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="./certifications.html">Certifications</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#footer">Get In Touch</a>
           </li>
         </ul>
